--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.17",
-    "axios": "^1.4.0",
-    "framer-motion": "^10.12.4",
-    "next": "^13.3.1",
+    "@heroicons/react": "^2.1.1",
+    "axios": "^1.6.7",
+    "framer-motion": "^11.0.6",
+    "next": "^14.1.0",
     "next-sitemap": "^4.0.9",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
