--- a/public/api/projects.json
+++ b/public/api/projects.json
@@ -3,7 +3,7 @@
     "title": "Piggment1",
     "shortDescription": "The Gradients and colors for the next smart creator",
     "description": "The Gradients and colors for the next smart creator",
-    "image": "https://ahmedm.tech/images/projects/Screen-Recording-2020-06-11-at-1.gif",
+    "image": "https://ahmednoreldin.com/images/projects/Screen-Recording-2020-06-11-at-1.gif",
     "tags": [
       "React",
       "Sass & CSS",
@@ -18,7 +18,7 @@
     "title": "Piggment2",
     "shortDescription": "The Gradients and colors for the next smart creator",
     "description": "The Gradients and colors for the next smart creator",
-    "image": "https://ahmedm.tech/images/projects/Screen-Recording-2020-06-11-at-1.gif",
+    "image": "https://ahmednoreldin.com/images/projects/Screen-Recording-2020-06-11-at-1.gif",
     "tags": [
       "React",
       "Sass & CSS",
